feat: 添加移动端适配功能，优化商品展示方式，新增图片模态框，更新样式以提升用户体验

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>商品价目表</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_8d5l8fzk5b87iudi.css">
 </head>
 <body>
     <div class="container">
